--- a/midterm-assignment/index.html
+++ b/midterm-assignment/index.html
@@ -9,27 +9,28 @@
 <br>
 
 <body>
-    <div class="container"> 
-        <header>
-             <div>  
-                 <!--Input heading-->
-                <h1 id="banner">LONE STARFISH</h1>
-            </div>
-                <!--Navigation-->
-            <div>
-                 <nav>
-                    <ul>
-                        <li><a href="index.html" id="home">HOME</a> </li>
-                        <li><a href="story.html" id="story">STORY</a></li>
-                        <li><a href="contact.html" id="contact">CONTACT</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </header>
-        <main>
-            <article>
-                 <!--Input heading of article-->
+     <header>
+        <div>  
+             <!--Input heading-->
+            <h1 id="banner">LONE STARFISH</h1>
+        </div>
+            <!--Navigation-->
+        <div>
+            <nav>
+                <ul>
+                    <li><a href="index.html" id="home">HOME</a> </li>
+                    <li><a href="story.html" id="story">STORY</a></li>
+                    <li><a href="contact.html" id="contact">CONTACT</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <main>
+        <article>
+            <!--Input heading of article-->
+                <section class="content">
                     <h2>Life of a starfish</h2>
+                    <img src="images/15-beach-sand-starfish-wallpaper.preview.jpg" alt="Starfish example" />
                     <p>Swallower catla Black angelfish grunter striped bass scissor-tail rasbora; slender mola. Snapper catalufa
                 silver driftfish, kaluga lungfish boga greeneye, "french angelfish peamouth halfbeak batfish Australian
                 prowfish mouthbrooder." Gibberfish tui chub mooneye smoothtongue; amur pike barbeled houndshark dwarf
@@ -44,8 +45,7 @@
                 drum yellow-edged moray velvet catfish flabby whalefish. Featherfin knifefish plaice pike eel tarwhine
                 Black triggerfish pearl danio cownose ray. Merluccid hake, platy peamouth humuhumunukunukuapua'a barred
                 danio. Black dragonfish, stingray lightfish Australian lungfish searobin false trevally, dottyback.</p>
-                <img src="images/15-beach-sand-starfish-wallpaper.preview.jpg" alt="Starfish example" />
-                <div>
+                </section>
                     <h3>Fact about the starfish</h3>
                         <ul>
                             <li>Australian herring barbel Mexican golden trout, killifish bonito; northern anchovy.</li>
