--- a/week-9/index.html
+++ b/week-9/index.html
@@ -19,7 +19,7 @@
             </div>
         </header>
         <main class="content">
-            <section clas="intro">
+            <section class="intro">
                 <h2> The UN Campaign for Individual Action</h2>
                 <p>COVID-19 has upended our lives. The way we work, the way we interact, the way we move about. This can
                     be a turning point. Let’s seize the moment, and change course -- toward more sustainable lifestyles.
