--- a/week-10/index.html
+++ b/week-10/index.html
@@ -17,6 +17,14 @@
             <div class="banner">
                 <h1>Act Now</h1>
             </div>
+            <nav class="main-nav">
+                <ul class="nav-list">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Climate Action</a> </a></li>
+                    <li><a href="#">For kids</a> </a></li>
+                    <li><a href="#">Fact and figures</a></li>
+                </ul>
+            </nav>
         </header>
         <main class="content">
             <section class="intro">
@@ -50,6 +58,21 @@
                 </div>
             </section>
             <!--closing app section-->
+            <section class="actions">
+                <h2> Start with 18 simple actions</h2>
+                <ul class="actions-list">
+                    <li><img src="images/bring_bag.png" alt="Bring own bag">Bring own bag</li>
+                    <li><img src="images/drive_less.png" alt="Drive less">Drive less</li>
+                    <li><img src="images/lights_off.png"alt="Light off">Light off</li>
+                    <li><img src="images/local.png" alt="Local produce">Local Produce</li>
+                    <li><img src="images/plant-based.png" alt="Plan based meals">Plan based meals</li>
+                    <li><img src="images/recycle.png"alt="Recycle">Recycle</li>
+                    <li><img src="images/reuse.png"alt="Reuse">Reuse</li>
+                    <li><img src="images/shower.png"alt="Shower">Shower</li>
+                    <li><img src="images/zero-waste_fashion.png" alt="Zero waste fashion">Zero waste Fashion</li> 
+                    <li><img src="images/unplug.png"alt="Unplug">Unplug</li>
+                </ul>
+            </section>
         </main>
         <footer class="site-footer">
             <ul class="attr-list">
