--- a/final-project/index.html
+++ b/final-project/index.html
@@ -27,24 +27,27 @@
             </ul>
         </nav>
         <div id="home">
-            <h1>Welcome to Three Star Media</h1>
-            <p>
+            <div class="banner">
+                <h1>Welcome to Three Star Media</h1>
+                <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tincidunt augue nec erat imperdiet
                 volutpat. In aliquet egestas dolor in rhoncus. Proin vel augue a magna efficitur tincidunt ut nec metus.
                 Donec sed dolor id quam eleifend vestibulum eu eu enim. Integer porttitor venenatis finibus. Fusce
                 molestie tincidunt diam eget ultrices. Sed ut fringilla quam. Sed nisl ipsum, convallis eu finibus
                 vitae, placerat a augue.
-            </p>
-            <nav>
+                </p>
+                <nav class="connect">
                 <a href="#"> Connect with us</a>
-            </nav>
+                </nav>
+            </div>
         </div>
     </header>
+
     <main class="container">
         <section id="aboutus">
+            <img src="images/about-us.jpg" alt="image about us" />
             <div class="about">
                 <h2>About Us</h2>
-                <img src="images/about-us.jpg" alt="image about us" />
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tincidunt augue nec erat imperdiet
                     volutpat. In aliquet egestas dolor in rhoncus. Proin vel augue a magna efficitur tincidunt ut nec
@@ -58,9 +61,9 @@
         </section>
         <section id="services">
             <h2>Our Services</h2>
-            <div class="ser1">
-                <h3>Digital Transformation</h3>
+            <div class="digital">
                 <img src="images/digital.jpg" alt="digital image" />
+                <h3>Digital Transformation</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tincidunt augue nec erat imperdiet
                     volutpat. In aliquet egestas dolor in rhoncus. Proin vel augue a magna efficitur tincidunt ut nec
                     metus.
@@ -70,9 +73,9 @@
                     <a href="#"> Digital Plans</a>
                 </nav>
             </div>
-            <div class="ser2">
-                <h3>Marketing</h3>
+            <div class="marketing">
                 <img src="images/marketing.jpg" alt="marketing image" />
+                <h3>Marketing</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tincidunt augue nec erat imperdiet
                     volutpat. In aliquet egestas dolor in rhoncus. Proin vel augue a magna efficitur tincidunt ut nec
                     metus.
@@ -82,9 +85,9 @@
                     <a href="#"> Marketing plans</a>
                 </nav>
             </div>
-            <div class="ser3">
-                <h3>Video Production</h3>
+            <div class="video">
                 <img src="images/video.jpg" alt="video production image" />
+                <h3>Video Production</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tincidunt augue nec erat imperdiet
                     volutpat. In aliquet egestas dolor in rhoncus. Proin vel augue a magna efficitur tincidunt ut nec
                     metus.
@@ -94,9 +97,9 @@
                     <a href="#"> Video Plans</a>
                 </nav>
             </div>
-            <div class="ser4">
-                <h3>Web Development</h3>
+            <div class="web">
                 <img src="images/web.jpg" alt="web image" />
+                <h3>Web Development</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tincidunt augue nec erat imperdiet
                     volutpat. In aliquet egestas dolor in rhoncus. Proin vel augue a magna efficitur tincidunt ut nec
                     metus.
@@ -106,9 +109,9 @@
                     <a href="#"> Web Plans</a>
                 </nav>
             </div>
-            <div class="ser5">
-                <h3>Print</h3>
+            <div class="print">
                 <img src="images/print.jpg" alt="print image" />
+                <h3>Print</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tincidunt augue nec erat imperdiet
                     volutpat. In aliquet egestas dolor in rhoncus. Proin vel augue a magna efficitur tincidunt ut nec
                     metus.
@@ -127,18 +130,19 @@
                 <a href="#">Learn more</a>
             </nav>
         </section>
+
         <section id="team">
             <h2>Our Team</h2>
-            <div class="team1">
-                <img src="images/john.jpg" alt="john doe"/>
+                <img src="images/john.jpg" alt="john doe" class="johndoe"/>
+                <div class="team1">
                 <h3>John Doe</h3>
                 <h4>CEO and Co-founder</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tincidunt augue nec erat imperdiet
                     volutpat. In aliquet egestas dolor in rhoncus. Proin vel augue a magna efficitur tincidunt ut nec metus.
                 </p>
             </div>
-            <div class="team2">
-                <img src="images/bob.jpg" alt="bob"/>
+                <img src="images/bob.jpg" alt="bob" class="bobrite"/>
+                <div class="team2">
                 <h3>Bob Rite</h3>
                 <h4>CEO and Co-founder</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tincidunt augue nec erat imperdiet
@@ -146,32 +150,62 @@
                 </p>
             </div>
         </section>
+
         <section id="contactus">
             <h2>Contact us</h2>
             <div class="message">
                 <h3>Send us a message</h3>
-                <form action="contact.html" method="post">
-                    <label for="fullname" >Full name</label>
-                    <input id ="fullname" type="text">
-                </form>
-                <form action="contact.html" method="post">
-                    <label for="email">Email</label>
-                    <input id="email" type="email">
-                </form>
-                <form action="contact.html" method="post">
-                    <label for="message">Your Message</label>
-                    <textarea id="message" rows="5"></textarea>
+                <form action="contact.html" method="GET">
+                    <div>
+                        <label for="fullname" >Full name</label>
+                        <input id ="fullname" type="text">
+                    </div>
+                    <div>
+                        <label for="email">Email</label>
+                        <input id="email" type="email">
+                    </div>
+                    <div>
+                        <label for="message">Your Message</label>
+                        <textarea id="message" rows="5"></textarea>
+                    </div>
+                    <button type="submit"> Send</button>
                 </form>
             </div>
+
+            <div class="hours">
+                <h3>Hours of operation</h3>
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>Day</th>
+                                <th>Hours</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Monday-Friday</td>
+                                <td>9AM-6PM</td>
+                            </tr>
+                            <tr>
+                                <td>Saturday-Sunday</td>
+                                <td>Close</td>
+                            </tr>
+                        </tbody>
+                    </table>
+            </div>
+            </div>
+
             <div class="location">
                 <h3>Location</h3>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8922.452357673641!2d-75.76203857659864!3d45.35062100220712!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce0718cc4a6ad7%3A0xc6cc467725843e2b!2sAlgonquin%20College%20Ottawa%20Campus!5e0!3m2!1sen!2sca!4v1627395864745!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
         </section>
-
-
     </main>
-
-
+    <footer class="footer">
+        <ul class="footer-content">
+            <li>&copy;Copyright Three Star Media 2020</li>
+            <li><span>All images are taken from <a href="https://unsplash.com">Unplash</a></span></li>
+        </ul>
+    </footer>
 </body>
-
 </html>
