--- a/final-project/index.html
+++ b/final-project/index.html
@@ -12,8 +12,10 @@
 <body>
     <header>
         <nav>
+            <!-- Add class to ul** -->
             <ul>
                 <li><img src="images/logo.png" alt="Logo" id="logo" /></li>
+                <!-- add class fo active to the home** -->
                 <li><a href="#home">Home</a></li>
                 <li><a href="#aboutus">About us</a></li>
                 <li><a href="#services">Services</a></li>
@@ -22,6 +24,7 @@
                 <li>
                     <form action="search.html" method="GET">
                         <input id="search" type="text" name="search" placeholder="Search">
+                        <!-- Add the button ưith the icon** -->
                     </form>
                 </li>
             </ul>
@@ -30,21 +33,23 @@
             <div class="banner">
                 <h1>Welcome to Three Star Media</h1>
                 <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tincidunt augue nec erat imperdiet
-                volutpat. In aliquet egestas dolor in rhoncus. Proin vel augue a magna efficitur tincidunt ut nec metus.
-                Donec sed dolor id quam eleifend vestibulum eu eu enim. Integer porttitor venenatis finibus. Fusce
-                molestie tincidunt diam eget ultrices. Sed ut fringilla quam. Sed nisl ipsum, convallis eu finibus
-                vitae, placerat a augue.
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tincidunt augue nec erat imperdiet
+                    volutpat. In aliquet egestas dolor in rhoncus. Proin vel augue a magna efficitur tincidunt ut nec
+                    metus.
+                    Donec sed dolor id quam eleifend vestibulum eu eu enim. Integer porttitor venenatis finibus. Fusce
+                    molestie tincidunt diam eget ultrices. Sed ut fringilla quam. Sed nisl ipsum, convallis eu finibus
+                    vitae, placerat a augue.
                 </p>
-                <nav class="connect">
+                <!-- Add a class in the a tag to style it as a button** -->
                 <a href="#"> Connect with us</a>
-                </nav>
+
             </div>
         </div>
     </header>
 
     <main class="container">
         <section id="aboutus">
+            <!-- add a container div here** -->
             <img src="images/about-us.jpg" alt="image about us" />
             <div class="about">
                 <h2>About Us</h2>
@@ -58,8 +63,10 @@
                     consectetur a mi eget laoreet.
                 </p>
             </div>
+            <!-- close the container div here** -->
         </section>
         <section id="services">
+            <!-- add a container div here** -->
             <h2>Our Services</h2>
             <div class="digital">
                 <img src="images/digital.jpg" alt="digital image" />
@@ -69,9 +76,7 @@
                     metus.
                     Donec sed dolor id quam eleifend vestibulum eu eu enim
                 </p>
-                <nav>
-                    <a href="#"> Digital Plans</a>
-                </nav>
+                <a href="#"> Digital Plans</a>
             </div>
             <div class="marketing">
                 <img src="images/marketing.jpg" alt="marketing image" />
@@ -81,9 +86,7 @@
                     metus.
                     Donec sed dolor id quam eleifend vestibulum eu eu enim
                 </p>
-                <nav>
-                    <a href="#"> Marketing plans</a>
-                </nav>
+                <a href="#"> Marketing plans</a>
             </div>
             <div class="video">
                 <img src="images/video.jpg" alt="video production image" />
@@ -93,9 +96,7 @@
                     metus.
                     Donec sed dolor id quam eleifend vestibulum eu eu enim
                 </p>
-                <nav>
-                    <a href="#"> Video Plans</a>
-                </nav>
+                <a href="#"> Video Plans</a>
             </div>
             <div class="web">
                 <img src="images/web.jpg" alt="web image" />
@@ -105,9 +106,7 @@
                     metus.
                     Donec sed dolor id quam eleifend vestibulum eu eu enim
                 </p>
-                <nav>
-                    <a href="#"> Web Plans</a>
-                </nav>
+                <a href="#"> Web Plans</a>
             </div>
             <div class="print">
                 <img src="images/print.jpg" alt="print image" />
@@ -117,48 +116,52 @@
                     metus.
                     Donec sed dolor id quam eleifend vestibulum eu eu enim
                 </p>
-                <nav>
-                    <a href="#"> Print Plans</a>
-                </nav>
+                <a href="#"> Print Plans</a>
+                <!-- close a container div here** -->
         </section>
         <section id="vision">
+            <!-- add a container div here** -->
             <h2>Our Vision</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tincidunt augue nec erat imperdiet
                 volutpat. In aliquet egestas dolor in rhoncus. Proin vel augue a magna efficitur tincidunt ut nec metus.
             </p>
-            <nav>
-                <a href="#">Learn more</a>
-            </nav>
+            <a href="#">Learn more</a>
+            <!-- close a container div here** -->
         </section>
 
         <section id="team">
+            <!-- add a container div here** -->
             <h2>Our Team</h2>
-                <img src="images/john.jpg" alt="john doe" class="johndoe"/>
-                <div class="team1">
+            <img src="images/john.jpg" alt="john doe" class="johndoe" />
+            <div class="team1">
                 <h3>John Doe</h3>
                 <h4>CEO and Co-founder</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tincidunt augue nec erat imperdiet
-                    volutpat. In aliquet egestas dolor in rhoncus. Proin vel augue a magna efficitur tincidunt ut nec metus.
+                    volutpat. In aliquet egestas dolor in rhoncus. Proin vel augue a magna efficitur tincidunt ut nec
+                    metus.
                 </p>
             </div>
-                <img src="images/bob.jpg" alt="bob" class="bobrite"/>
-                <div class="team2">
+            <img src="images/bob.jpg" alt="bob" class="bobrite" />
+            <div class="team2">
                 <h3>Bob Rite</h3>
                 <h4>CEO and Co-founder</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tincidunt augue nec erat imperdiet
-                    volutpat. In aliquet egestas dolor in rhoncus. Proin vel augue a magna efficitur tincidunt ut nec metus.
+                    volutpat. In aliquet egestas dolor in rhoncus. Proin vel augue a magna efficitur tincidunt ut nec
+                    metus.
                 </p>
             </div>
+            <!-- close a container div here** -->
         </section>
 
         <section id="contactus">
+            <!-- add a container div here** -->
             <h2>Contact us</h2>
             <div class="message">
                 <h3>Send us a message</h3>
                 <form action="contact.html" method="GET">
                     <div>
-                        <label for="fullname" >Full name</label>
-                        <input id ="fullname" type="text">
+                        <label for="fullname">Full name</label>
+                        <input id="fullname" type="text">
                     </div>
                     <div>
                         <label for="email">Email</label>
@@ -174,31 +177,34 @@
 
             <div class="hours">
                 <h3>Hours of operation</h3>
-                    <table>
-                        <thead>
-                            <tr>
-                                <th>Day</th>
-                                <th>Hours</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>Monday-Friday</td>
-                                <td>9AM-6PM</td>
-                            </tr>
-                            <tr>
-                                <td>Saturday-Sunday</td>
-                                <td>Close</td>
-                            </tr>
-                        </tbody>
-                    </table>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Day</th>
+                            <th>Hours</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Monday-Friday</td>
+                            <td>9AM-6PM</td>
+                        </tr>
+                        <tr>
+                            <td>Saturday-Sunday</td>
+                            <td>Close</td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
             </div>
 
             <div class="location">
                 <h3>Location</h3>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8922.452357673641!2d-75.76203857659864!3d45.35062100220712!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce0718cc4a6ad7%3A0xc6cc467725843e2b!2sAlgonquin%20College%20Ottawa%20Campus!5e0!3m2!1sen!2sca!4v1627395864745!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8922.452357673641!2d-75.76203857659864!3d45.35062100220712!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce0718cc4a6ad7%3A0xc6cc467725843e2b!2sAlgonquin%20College%20Ottawa%20Campus!5e0!3m2!1sen!2sca!4v1627395864745!5m2!1sen!2sca"
+                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
+            <!-- close a container div here** -->
         </section>
     </main>
     <footer class="footer">
@@ -208,4 +214,5 @@
         </ul>
     </footer>
 </body>
+
 </html>
